=== MetricFu 2.1.2 / 2012-09-05

* Getting it working on Rails 3, partly by going through the pull requests and setting gem dependencies to older, working versions - Benjamin Fleischer
 
=== MetricFu 2.1.1 / 2011-03-2

* Making syntax highlighting optional (config.syntax_highlighting = false) so Ruby 1.9.2 users don't get "invalid byte sequence in UTF-8" errors.

=== MetricFu 2.1.0 / 2011-03-1

* Flog gemspec version was >= 2.2.0, which was too early and didn't work. Changed to >= 2.3.0 -  Chris Griego
* RCov generator now uses a regex with begin and end line anchor to avoid splitting on comments with equal signs in source files - Andrew Selder
* RCov generator now always strips the 3 leading characters from the lines when reconstruction source files so that heredocs and block comments parse successfully - Andrew Selder
* Dan Mayer ported some specs for the Hotspots code into MetricFu from Caliper's code.
* Stefan Huber fixed some problems with churn pretending not to support Svn.
* Kakutani Shintaro added the ability to opt out of opening files with TextMate (config.darwin_txmt_protocol_no_thanks = true).
* Joel Nimety and Andrew Selder fixed a problem where Saikuro was parsing a dir twice.
* Dan Sinclair added some awesome 'annotate' functionality to the Hotspots page. Click on it so see the file with problems in-line. 
* Dan Sinclair added a verbose mode (config.verbose = true).

=== MetricFu 2.0.1 / 2010-11-13

* Delete trailing whitespaces - Delwyn de Villiers
* Stop Ubuntu choking on invalid multibyte char (US-ASCII) - Delwyn de Villiers
* Fix invalid next in lib/base/metric_analyzer.rb - Delwyn de Villiers
* Don't load Saikuro for Ruby 1.9.2 - Delwyn de Villiers
* Fixed a bug reported by Andrew Davis on the mailing list where configuring the data directory causes dates to be 0/0 - Joshua Cronemeyer

=== MetricFu 2.0.0 / 2010-11-10

* Hotspots - Dan Mayer, Ben Brinckerhoff, Jake Scruggs