@@ -1,6 +1,7 @@
 === MetricFu 2.1.2 / 2012-09-05
 
 * Getting it working on Rails 3, partly by going through the pull requests and setting gem dependencies to older, working versions - Benjamin Fleischer
+* Added link_prefix to configuration to allow URIs specified in config instead of file or txmt - dan sinclair
  
 === MetricFu 2.1.1 / 2011-03-2
 
